--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,18 @@
 *{
     padding: 0;
     margin: 0;
-    box-sizing: content-box;
+    box-sizing: border-box;
 }
 body{
     display: grid;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 100dvh;
+    width: 100%;
     background: linear-gradient(90deg,#000,#fff);
 }
 div{
+margin: auto;
 background-color: #fffa;
 display: grid;
 align-items: center;
@@ -40,4 +42,20 @@ textarea{
 textarea:focus{
     border:solid 1px #222222;
     background: #fff;
+}
+@media(max-width: 480px){
+    div{
+        padding: 30px;
+    }
+    h1{
+        font-size: 50px;
+    }
+    h2{
+        font-size: 16px;
+    }
+    textarea{
+        height: 80px;
+        padding: 20px;
+    }
+    
 }
